--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,5 @@
-# Use a imagem oficial do PHP 8.0.3 com Apache
-FROM php:8.0.30-apache
+# Estágio base
+FROM php:8.0.30-apache AS base
 
 # Instalar dependências do sistema
 RUN apt-get update && apt-get install -y \
@@ -28,3 +28,27 @@ RUN chown -R www-data:www-data /var/www/html \
 
 # Expor a porta 80
 EXPOSE 80
+
+# Estágio para o serviço web
+FROM base AS web
+
+# Estágio para o serviço cron
+FROM base AS cron
+
+# Instalar cron
+RUN apt-get update && apt-get install -y cron
+
+# Copiar o crontab para o contêiner
+COPY docker/crontab /etc/cron.d/cakephp-cron
+
+# Dar permissão ao crontab
+RUN chmod 0644 /etc/cron.d/cakephp-cron
+
+# Aplicar o crontab
+RUN crontab /etc/cron.d/cakephp-cron
+
+# Criar o arquivo de log do cron
+RUN touch /var/log/cron.log
+
+# Definir o entrypoint para o cron
+ENTRYPOINT ["/bin/sh", "-c", "cron && tail -f /var/log/cron.log"]
